--- a/render/css/style.css
+++ b/render/css/style.css
@@ -28,3 +28,14 @@
     transition: all 0.4s ease;
     text-align: center;
 }
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
+
+.table-container {
+    margin: 0 auto;
+    margin-top: 100px;
+    width: 80%;
+}
