--- a/render/css/style.css
+++ b/render/css/style.css
@@ -114,3 +114,12 @@ button:hover.edit {
     background-color: #218838; /* Darker green on hover */
 }
 
+.promt-container {
+    display: flex;
+    justify-content: space-around;
+    margin:  auto;
+    width: 80%;
+    padding: 20px;
+    background-color: white; /* White background */
+    box-shadow: 0 2px 4px rgba(0,0,0,0.1); /* Subtle shadow for depth */
+}
