--- a/render/css/style.css
+++ b/render/css/style.css
@@ -167,6 +167,7 @@ button:hover.edit {
     right: 0;
     text-align: center;
     transition: top 0.5s ease;
+pointer-events: none;
 }
 
 .feedback-icon {
